Fix PDF export font: use Inter instead of Open Sans by prioritizing Inter in font-helvetica-neue

--- a/app/fonts.css
+++ b/app/fonts.css
@@ -10,7 +10,7 @@
 
 /* Explicit Helvetica Neue utility classes */
 .font-helvetica-neue {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+  font-family: 'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
 }
 
 .font-helvetica {
